# hs-monkey-interpreter

./: README.md  grammar.ebnf  monkey-interpreter.cabal
repl/: Main.hs
src/: Environment.hs  Hash.hs  Interpreter.hs  Lexer.hs  Parser.hs  Runtime.hs
tests/Test/: InterpreterSpec.hs  LexerSpec.hs  ParserSpec.hs
