cabal-version: 2.4

name: monkey-interpreter
version: 0.1

library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
    base,
    containers,
    parsec

  exposed-modules:
    Environment,
    Interpreter,
    Lexer,
    Parser

test-suite monkey-interpreter-tests
  default-language: Haskell2010
  hs-source-dirs: tests

  type: exitcode-stdio-1.0
  main-is: Spec.hs

  build-depends:
    base,
    hspec,
    monkey-interpreter,
    parsec

  other-modules:
    Test.InterpreterSpec
    Test.LexerSpec
    Test.ParserSpec
