cabal-version: 2.4

name: monkey-interpreter
version: 0.2


library
  default-language: Haskell2010
  hs-source-dirs: src

  ghc-options:
    -Wall

  build-depends:
    base,
    containers,
    mtl,
    parsec

  exposed-modules:
    Environment,
    Hash,
    Interpreter,
    Lexer,
    Parser,
    Runtime


executable monkey-repl
  default-language: Haskell2010
  hs-source-dirs: repl

  main-is: Main.hs

  ghc-options:
    -Wall

  build-depends:
    base,
    monkey-interpreter


test-suite tests
  default-language: Haskell2010
  hs-source-dirs: tests

  type: exitcode-stdio-1.0
  main-is: Spec.hs

  ghc-options:
    -Wall

  build-depends:
    base,
    hspec,
    monkey-interpreter,
    parsec

  other-modules:
    Test.InterpreterSpec
    Test.LexerSpec
    Test.ParserSpec
